# agent-coder

./: ARCHITECTURE.md  README.md  main.py  pyproject.toml
.agent-coder/: hooks.json
.agent-coder/agents/: code-reviewer.md
.agent-coder/skills/: git-commit.md
src/: config.py  models.py
src/agent/: core.py  hooks.py  lsp.py  lsp_manager.py  mcp_manager.py  skills.py  speckit.py  subagents.py  tools.py
src/tui/: app.py  settings_screen.py
tests/: test_agent.py
