[project]
name = "agent-coder"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "aiohttp>=3.13.2",
    "ollama>=0.6.1",
    "pydantic>=2.12.5",
    "pydantic-ai>=1.25.1",
    "pydantic-settings>=2.12.0",
    "textual>=6.7.0",
    "typer>=0.20.0",
]
